Complete Pipeline to ImageServer + Rename Manager -> Service